--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "terser": "^5.28.1"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
