--- a/vercel.json
+++ b/vercel.json
@@ -3,34 +3,43 @@
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "framework": "vite",
-  "routes": [
+  "rewrites": [
     {
-      "src": "/agriculture",
-      "dest": "/agriculture.html"
+      "source": "/vision-mission",
+      "destination": "/vision-mission.html"
     },
     {
-      "src": "/mining",
-      "dest": "/mining.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
     },
     {
-      "src": "/energy",
-      "dest": "/energy.html"
+      "source": "/(.*).js",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript"
+        }
+      ]
     },
     {
-      "src": "/infrastructure",
-      "dest": "/infrastructure.html"
-    },
-    {
-      "src": "/marine",
-      "dest": "/marine.html"
-    },
-    {
-      "src": "/telecom",
-      "dest": "/telecom.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*).css",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/css"
+        }
+      ]
     }
   ]
 } 
